background and hover
background changes and added hover to buttons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h1 class="text-white">Devlances</h1>
           </div>
           <nav>
+            <img class="background-light" src="/img/light.svg" alt="">
             <a href="#">Community</a>
             <a href="#">Features</a>
             <a href="#">Guides</a>
