--- a/src/team.html
+++ b/src/team.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/src/css/team.css">
+    <link rel="icon" href="/img/devlances-icon.svg">
+    <title>Devlances | Team</title>
 </head>
 <body>
 
     <!-- nav-bar -->
-
+    <img class="background-stars" src="/img/stars.svg" alt="">
     <header>  
         <div class="logo">
             <h1 class="text-white">Devlances</h1>
           </div>
           <nav>
             <img class="background-light" src="/img/light.svg" alt="">
-            <a href="#">Community</a>
+            <a href="index.html">Community</a>
             <a href="#">Features</a>
             <a href="#">Guides</a>
           </nav>
@@ -26,7 +27,7 @@
         </header>
 
         <!-- desc-side -->
-
+        <img class="background-stars" src="/img/stars.svg" alt="">
     <section>
         <div id="description">
             <h1>Our <span>Team</span></h1>
@@ -35,7 +36,7 @@
             <button class="btn-apply">Apply</button>
            </div>
         </div>
-
+        <img class="background-stars" src="/img/stars.svg" alt="">
         <!-- team member info boxes -->
 
         <div id="teammates">
@@ -48,9 +49,10 @@
                     <a href="https://github.com/SpadeyDev"><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
                 </div>
             </div>
+            <img class="background-stars" src="/img/stars.svg" alt="">
             <div id="box-2" class="box">
                 <img src="/img/team_member_1.svg" alt="">
-                <h1>Pussiecat</h1>
+                <h1>Chewie</h1>
                 <h2>Data Analyst</h2>
                 <div id="medias">
                     <a href=""><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
@@ -59,20 +61,25 @@
             </div>
             <div id="box-3" class="box">
                 <img src="/img/team_member_4.svg" alt="">
-                <h1>Berke</h1>
+                <h1>Yujise</h1>
                 <h2>Backend Developer</h2>
                 <div id="medias">
                     <a href="https://github.com/chefberke"><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
                     <a href="https://github.com/chefberke"><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
                 </div>
                 </div>
+                <img class="background-stars" src="/img/stars.svg" alt="">
             <div id="box-4" class="box">
                 <img src="/img/team_member_3.svg" alt="">
-                <h1>Yujise</h1>
+                <h1>Nursie</h1>
                 <h2>Project Manager</h2>
+                <div id="medias">
                 <a href=""><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
+                <a href=""><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
             </div>
         </div>
     </section>
+
+
 </body>
 </html>
