--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devlances</title>
     <link rel="stylesheet" href="./css/global.css">
+
+    <link rel="icon" href="/img/devlances-icon.svg">
 </head>
 <body>
 
 
     <header>  
+
+      <img class="background-stars" src="/img/stars.svg" alt="">
     <div class="logo">
         <h1 class="text-white">Devlances</h1>
       </div>
@@ -37,6 +41,11 @@
     <div class="button1"><a href="google.com">Starts Here!</a></div>
 </div>
 <div class="team">
+  <img class="background-stars" src="/img/stars.svg" alt="">
+    <img src="/img/team.png" alt="">
+</div>
+</section>
+<img class="background-stars" src="/img/stars.svg" alt="">
     <img src="/img/team.png" alt="">
 </div>
 </section>
@@ -48,6 +57,7 @@
 </div>
 
 <div class="container">
+  <img class="background-stars" src="/img/stars.svg" alt="">
   <div class="row">
     <div class="box-n ml"><h1>Event</h1><p>Participate in events regularly, get the chance to appear at the top of the rankings!</p>
     <img src="/img/event.png" alt=""></div>
@@ -78,6 +88,11 @@
   <div class="buttons"><a href="">Early Acces</a></div>
   </div>
 </section>
+<img class="background-stars" src="/img/stars.svg" alt="">
+<section class="threepage">
+<div class="text-2"><h1>Like and <span class="red">share</span></h1><p>Like the code shares you like, or share one for the community!</p></div>
+<div class="boxing">
+  <img class="background-stars" src="/img/stars.svg" alt="">
 
 <section class="threepage">
 <div class="text-2"><h1>Like and <span class="red">share</span></h1><p>Like the code shares you like, or share one for the community!</p></div>
@@ -90,9 +105,13 @@
 
 <section>
 
-  <div class="text-2"><h1>We're here to do<span class="red">better</span></h1><p>As community builders ourselves, we prioritize listening to users, providing exceptional support, pricing <br>fairly, and never gating features behind NFTs. Read what our users think of us thus far.
+  <div class="text-2"><h1>We're here to do <span class="red">better</span></h1><p>As community builders ourselves, we prioritize listening to users, providing exceptional support, pricing <br>fairly, and never gating features behind NFTs. Read what our users think of us thus far.
+    <img class="background-stars" src="/img/stars.svg" alt="">
   </p></div>
 
+  <img class="background-stars" src="/img/stars.svg" alt="">
+  <div class="text-2"><h1>We're here to do<span class="red">better</span></h1><p>As community builders ourselves, we prioritize listening to users, providing exceptional support, pricing <br>fairly, and never gating features behind NFTs. Read what our users think of us thus far.
+  </p></div>
 
   <div class="grid-container">
     <div class="grid-row">
@@ -136,7 +155,7 @@
   </div>
   
 </section>
-
+<img class="background-stars" src="/img/stars.svg" alt="">
 
 <section class="last-page">
   <div class="logo-last">
