--- a/src/team.html
+++ b/src/team.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/team.css">
+    <link rel="icon" href="/img/devlances-icon.svg">
+    <title>Devlances | Team</title>
     <title>Devlances</title>
 </head>
 <body>
 
     <!-- nav-bar -->
-
+    <img class="background-stars" src="/img/stars.svg" alt="">
     <header>  
         <div class="logo">
             <h1 class="text-white">Devlances</h1>
@@ -26,7 +28,7 @@
         </header>
 
         <!-- desc-side -->
-
+        <img class="background-stars" src="/img/stars.svg" alt="">
     <section>
         <div id="description">
             <h1>Our <span>Team</span></h1>
@@ -35,23 +37,24 @@
             <button class="btn-apply">Apply</button>
            </div>
         </div>
-
+        <img class="background-stars" src="/img/stars.svg" alt="">
         <!-- team member info boxes -->
 
         <div id="teammates">
             <div id="box-1" class="box">
                 <img src="/img/team_member_2.svg" alt="">
                 <h1>Spadey</h1>
-                <h2>Frontend Developer</h2>
+                <h2>Lead Developer</h2>
                 <div id="medias">
                     <a href="https://github.com/SpadeyDev"><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
                     <a href="https://github.com/SpadeyDev"><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
                 </div>
             </div>
+            <img class="background-stars" src="/img/stars.svg" alt="">
             <div id="box-2" class="box">
                 <img src="/img/team_member_1.svg" alt="">
                 <h1>Chewie</h1>
-                <h2>Data Analyst</h2>
+                <h2>UI Designer</h2>
                 <div id="medias">
                     <a href=""><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
                     <a href=""><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
@@ -59,17 +62,18 @@
             </div>
             <div id="box-3" class="box">
                 <img src="/img/team_member_4.svg" alt="">
-                <h1>Yujise</h1>
-                <h2>Backend Developer</h2>
+                <h1>Berke</h1>
+                <h2>Frontend Developer</h2>
                 <div id="medias">
                     <a href="https://github.com/chefberke"><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
                     <a href="https://github.com/chefberke"><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
                 </div>
                 </div>
+                <img class="background-stars" src="/img/stars.svg" alt="">
             <div id="box-4" class="box">
                 <img src="/img/team_member_3.svg" alt="">
                 <h1>Nursie</h1>
-                <h2>Project Manager</h2>
+                <h2>Data Analyst</h2>
                 <div id="medias">
                 <a href=""><img class="social-media" src="/img/github-mark-white.svg" alt=""></a>
                 <a href=""><img class="social-media" src="/img/linkedin-svgrepo-com.svg" alt=""></a>
