--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+ <link rel="icon" href="/img/devlances-icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devlances</title>
     <link rel="stylesheet" href="./css/global.css">
