footer added and bugs fix
footer and bug fix

--- a/src/team.html
+++ b/src/team.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/css/team.css">
     <link rel="icon" href="/img/devlances-icon.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Devlances | Team</title>
     <title>Devlances</title>
 </head>
@@ -80,6 +81,51 @@
             </div>
         </div>
     </section>
+
+
+
+     <!-- Footer -->
+
+
+    <footer id="footer-side">
+        <div class="footer">
+            <h2>Devlances @2023</h2>
+            <p>We are always working to <br>be the best and moving <br>forward. We are excited <br>to see you among us in <br>this project.</p>
+        </div>
+        <div class="footer">
+            <h2>Main Pages</h2>
+            <a href="#">Home</a>
+            <a href="#">Team</a>
+            <a href="#">Community</a>
+            <a href="#">Guides</a>
+        </div>
+        <div class="footer">
+            <h2>Help Pages</h2>
+            <a href="#">Docs</a>
+            <a href="#">Help</a>
+            <a href="#">Ticket</a>
+            <a href="#">Support</a>
+        </div>
+        <div class="footer">
+            <h2>Contact</h2>
+            <p>Canada 1002, CA</p>
+            <p>devlances@hi.com</p>
+            <p>+01 234 567 88</p>
+            <p>+01 234 567 89</p>
+        </div>
+        <div class="footer-second">
+            <div class="footer-btn">
+                <button>Join Discord</button>
+            </div>
+        <div class="footer-sm" class="footer">
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-discord"></i></a>
+            <a href=""><i class="fab fa-reddit"></i></a>
+        </div>
+    </div>
+    </footer>
 
 
 </body>
